--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,11 @@
-prune paper
-# This subpackage is only used in development checkouts and should not be included in built tarballs
+# Exclude specific files
+# All files which are tracked by git and not explicitly excluded here are included by setuptools_scm
+# Prune folders
+prune build
+prune docs/_build
+prune docs/api
+global-exclude *.pyc *.o
+
+# This subpackage is only used in development checkouts
+# and should not be included in built tarballs
 prune drms/_dev
