Apply suggestions from code review

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,6 @@ envlist =
     py310-oldestdeps
     codestyle
     build_docs
-requires =
-    tox-pypi-filter
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
@@ -80,10 +78,10 @@ commands =
     --cov-report=xml \
     --cov=drms \
     --cov-config={toxinidir}/.coveragerc \
+    online:  --timeout=120 \
+    online:  --remote-data=any \
     {toxinidir}/docs \
     {posargs}
-    !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --timeout=120 --remote-data=any {posargs}
 
 [testenv:codestyle]
 pypi_filter =
