pytest.ini update from old setup.cfg

--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,14 @@ addopts =
     --doctest-rst
     -p no:unraisableexception
     -p no:threadexception
+markers =
+    remote_data: marks this test function as needing remote data.
+    jsoc: marks the test function as needing a connection to JSOC.
+    kis: marks the test function as needing a connection to KIS.
+    flaky: from sunpy
+remote_data_strict = True
+log_cli=true
+log_level=INFO
 filterwarnings =
     # Turn all warnings into errors so they do not pass silently.
     error
@@ -31,3 +39,11 @@ filterwarnings =
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
     # is being ignored
+    # This is due to dependencies building with a numpy version different from
+    # the local installed numpy version, but should be fine
+    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
+    # https://github.com/pytest-dev/pytest-cov/issues/557
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
+    ignore:.*is deprecated and slated for removal in Python 3:DeprecationWarning
