Add back sunpy job with less code

--- a/tox.ini
+++ b/tox.ini
@@ -71,12 +71,13 @@ commands =
     pytest \
     -vvv \
     -r fEs \
-    --pyargs drms \
+    !sunpy: --pyargs drms \
+    sunpy: --pyargs sunpy.net.jsoc \
     --cov-report=xml \
     --cov=drms \
     --cov-config={toxinidir}/.coveragerc \
     online: --timeout=120 \
-    online: --remote-data=any \
+    online,sunpy: --remote-data=any \
     {toxinidir}/docs \
     {posargs}
 
