--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,18 +80,14 @@ jobs:
       envs: |
         - linux: build_docs
 
-  cron:
-    if: |
-      github.event_name == 'workflow_dispatch' || (
-        github.event_name == 'pull_request' &&
-        contains(github.event.pull_request.labels.*.name, 'Run cron CI')
-      )
+  online:
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@main
     with:
       default_python: '3.12'
       submodules: false
       coverage: codecov
       toxdeps: "tox-pypi-filter"
+      posargs: -n 1 --dist loadgroup
       envs: |
         - linux: py312-online
         - linux: py312-sunpy
