--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ min_version = 4.0
 requires =
     tox-pypi-filter>=0.14
 envlist =
-    py{310,311,312}
+    py{310,311,312}{,-online,-sunpy}
     py312-devdeps
     py310-oldestdeps
     codestyle
@@ -29,10 +29,10 @@ pass_env =
     LOCALE_ARCHIVE
     # If the user has set a LC override we should follow it
     LC_ALL
+    # HTTP Proxy
     HTTP_PROXY
     HTTPS_PROXY
     NO_PROXY
-    CIRCLECI
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
