no docs on sunpy

--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ commands =
     --cov-config={toxinidir}/.coveragerc \
     online: --timeout=120 \
     online,sunpy: --remote-data=any \
-    {toxinidir}/docs \
+    !sunpy: {toxinidir}/docs \
     {posargs}
 
 [testenv:codestyle]
