Registers package with sunpy template (#120)
Co-authored-by: Stuart Mumford <stuart@cadair.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,116 +1,62 @@
 [build-system]
 requires = [
-  "setuptools",
-  "setuptools_scm[toml]",
+  "setuptools>=62.1",
+  "setuptools_scm[toml]>=6.2",
   "wheel",
-  "oldest-supported-numpy",
 ]
-build-backend = 'setuptools.build_meta'
+build-backend = "setuptools.build_meta"
 
-[tool.black]
-line-length = 120
-target-version = ['py310']
-exclude = '''
-(
-  /(
-    \.eggs
-    | \.git
-    | \.mypy_cache
-    | \.tox
-    | \.venv
-    | _build
-    | build
-    | dist
-    | docs
-    | .history
-  )/
-)
-'''
-
-[tool.isort]
-profile = "black"
-line_length = 120
-length_sort = "False"
-length_sort_sections = "stdlib"
-
-[tool.ruff]
-target-version = "py310"
-line-length = 120
-exclude=[
-    "__pycache__",
-    "__pypackages__",
-    "_build",
-    ".bzr",
-    ".direnv",
-    ".eggs",
-    ".git-rewrite",
-    ".git",
-    ".hg",
-    ".mypy_cache",
-    ".nox",
-    ".pants.d",
-    ".pytype",
-    ".ruff_cache",
-    ".svn",
-    ".tox",
-    ".venv",
-    "buck-out",
-    "build",
-    "dist",
-    "node_modules",
-    "paper/create_joss_figure.py",
-    "tools/**",
-    "venv",
+[project]
+name = "drms"
+description = "Access HMI, AIA and MDI data from the Standford JSOC DRMS"
+requires-python = ">=3.10"
+readme = { file = "README.rst", content-type = "text/x-rst" }
+license = { file = "licenses/LICENSE.rst" }
+authors = [
+  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
 ]
-
-[tool.ruff.lint]
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-select = [
-       "E",
-       "F",
-       "W",
-       "UP",
-       "PT",
-       "RET",
-       "TID",
-       "PLE",
-       "NPY",
-       "RUF",
-       "PGH",
-       "PTH",
-       "BLE",
-       "FBT",
-       "B",
-       "A",
-       "COM",
-       "C4",
-       "T20",
-       "RSE",
-       "ERA",
+dependencies = [
+  "numpy>=1.23.5",
+  "pandas>=1.5.1",
+  "packaging>=23.0"
 ]
-extend-ignore = [
-    "E501",  # Line too long
+dynamic = [ "version" ]
+
+[project.optional-dependencies]
+tests = [
+  "pytest",
+  "pytest-astropy",
+  "pytest-doctestplus",
+  "pytest-cov",
+  "pytest-xdist",
+  "astropy",
 ]
-
-[tool.ruff.lint.per-file-ignores]
-"examples/*.py" = [
-  "T201",
-  # We need print in our examples
+docs = [
+  "astropy",
+  "matplotlib",
+  "sphinx",
+  "sphinx-automodapi",
+  "sphinx-changelog",
+  "sphinx-copybutton",
+  "sphinx-gallery",
+  "sphinx-hoverxref",
+  "sphinxext-opengraph",
+  "sunpy-sphinx-theme",
+  "sphinx-automodapi",
 ]
-"examples/plot_hmi_modes.py" = [
-  "E741", # Ambiguous variable name
-]
+[project.urls]
+repository = "https://sunpy.org"
 
-[tool.ruff.lint.pydocstyle]
-convention = "numpy"
+[tool.setuptools]
+zip-safe = false
+include-package-data = true
 
-[tool.ruff.lint.flake8-quotes]
-docstring-quotes = "double"
+[tool.setuptools.packages.find]
+include = ["drms*"]
+exclude = ["drms._dev*"]
 
-[tool.codespell]
-skip = "*.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history"
-ignore-words-list = "sav,requestor"
+[tool.setuptools_scm]
+write_to = "drms/_version.py"
 
 [ tool.gilesbot ]
   [ tool.gilesbot.pull_requests ]
