Updates from package template (#151)
Co-authored-by: Nabil Freij <nabil.freij@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,12 @@ dynamic = [ "version" ]
 
 [project.optional-dependencies]
 tests = [
+  "astropy",  # Doctests
   "pytest",
   "pytest-astropy",
   "pytest-doctestplus",
   "pytest-cov",
   "pytest-xdist",
-  "astropy",
 ]
 docs = [
   "sphinx",
