--- a/tox.ini
+++ b/tox.ini
@@ -41,15 +41,15 @@ setenv =
     JSOC_EMAIL = jsoc@sunpy.org
 deps =
     # For packages which publish nightly wheels this will pull the latest nightly
-    devdeps: numpy>=0.0.dev0
+    # devdeps: astropy>=0.0.dev0
     # Packages without nightly wheels will be built from source like this
     # devdeps: git+https://github.com/ndcube/ndcube
     oldestdeps: minimum_dependencies
-    # The following indicates which extras_require will be installed
+    # Extra pluings for the CI
     pytest-xdist
     pytest-timeout
     # These are specific extras we use to run the sunpy tests.
-    sunpy: git+https://github.com/sunpy/sunpy
+    sunpy: sunpy>=0.0.dev0
     sunpy: beautifulsoup4
     sunpy: mpl-animators
     sunpy: reproject
